# rust-py-tools

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml  target.yaml
ci/: build_deb.sh
rust_py_tools/: __init__.py  string.pyi
rust_py_tools_d/: __init__.py  string.pyi
src/: lib.rs  string_tools.rs
src/string_tools/: distinct_subsequences.rs  edit_distance.rs  mod.rs
