[package]
name = "rust-py-tools-d"
version = "0.1.1"
edition = "2021"
authors = ["dandan <454273687@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_py_tools_d"
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
