[package]
authors = ["dandan <454273687@qq.com>"]
edition = "2021"
name = "rust-py-tools-d"
version = "0.1.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "rust_py_tools_d"

[features]
default = []
python = []

[dependencies]
pyo3 = {version = "0.17.1", features = ["extension-module"]}
